# jira-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHEAT-SHEET.md  CICD.md  CLAUDE.md  DATABASE.md  Dockerfile  HOW-TO-USE.md  LEARNING-GUIDE.md  MANUAL_TEST.md  PRD.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 9d9e22f43b8a_initial_schema.py  b4e7a2c1f935_add_administrator_to_project_role_enum.py
app/api/v1/: auth.py  backlog.py  comments.py  epics.py  issues.py  projects.py  router.py  sprints.py  users.py
app/core/: config.py  database.py  dependencies.py  security.py
app/exceptions/: app_exceptions.py  handlers.py
app/middleware/: logging.py
app/models/: __init__.py  comment.py  enums.py  epic.py  issue.py  issue_status_history.py  project.py  sprint.py  user.py
app/repositories/: base.py  comment_repository.py  epic_repository.py  issue_repository.py  issue_status_history_repository.py  project_member_repository.py  project_repository.py  refresh_token_repository.py  sprint_repository.py  user_repository.py
app/schemas/: auth.py  backlog.py  comment.py  common.py  epic.py  issue.py  project.py  sprint.py  user.py
app/services/: auth_service.py  backlog_service.py  comment_service.py  epic_service.py  issue_service.py  project_service.py  sprint_service.py  user_service.py
scripts/: deploy.sh
tests/: conftest.py
tests/integration/: test_auth.py  test_issues.py  test_projects.py  test_sprints.py
tests/unit/: conftest.py  test_auth_service.py  test_issue_service.py  test_sprint_service.py
