[project]
name = "jira-backend"
version = "0.1.0"
description = "Simplified Jira-like Issue Tracking System Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "redis[asyncio]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "coverage>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",   # line too long (black handles this)
    "B008",   # function call in default arg (FastAPI Depends pattern)
    "F821",   # undefined name in string annotation (SQLAlchemy forward references)
    "UP042",  # use StrEnum — SQLAlchemy Enum column requires str+Enum pattern
    "UP046",  # use type parameters — Generic[T] syntax for SQLAlchemy compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
